[package]
name = "option-arb-analyzer"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.66"
chrono = "0.4.23"
dotenv = "0.15.0"
env_logger = "0.10.0"
fehler = "1.0.0"
futures = "0.3.25"
ordered-float = "3.4.0"
tokio = { version = "1.16.1", features = ["full"] }
